# NeuralNet

./: CMakeLists.txt  README.md
include/: Dataset.h  Network.h
models/: model
src/: DataSet.cpp  Network.cpp  main.cpp
